--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3",
